--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # http://doc.scrapy.org/topics/scrapyd.html
 
 [settings]
-default = deviant_art.settings
+default = research_scrapers.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = deviant_art
+project = research_scrapers
